Login based on resources
using this system : https://devdactic.com/ionic-4-jwt-login/

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <ion-content>
         <ion-list id="inbox-list">
           <ion-list-header>ePerpus</ion-list-header>
-          <ion-note>Selamat Datang di</ion-note>
+          <ion-note>Selamat Datang</ion-note>
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             <ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none"
